JDK9 adaptions