@@ -1,10 +1,12 @@
 #!/bin/bash
+set -e
 
-if [ "$JDK" = "9" ]  || [ "$LATEST_MAVEN" = "true" ]; then
+if [ "$JDK" = "9" ] || [ "$LATEST_MAVEN" = "true" ]; then
   MVN_BIN=/tmp/apache-maven/bin/mvn
   export MAVEN_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m"
 else
   MVN_BIN=mvn
+  export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
 fi
 
 if [ "$JDK" = "9" ]; then
